# GStreamerLearning

./: CHANGELOG.md  CHANGELOG_zh-CN.md  LICENSE  README.md  README_zh-CN.md
docs/basics/: 00-development-environment.md  00-development-environment_zh-CN.md
examples/basic_examples/00-hello-gstreamer/: CMakeLists.txt  main.cpp
